--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -1,8 +1,8 @@
 <h3>コネポケで禁止されている出品物</h3>
 <hr>
 
-<h3><font color="#ff0000"> <strong>法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの</strong> </font></h3>
+<h3><font color="#ff0000"><strong>法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの</strong></font></h3>
 
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 法令違反に抵触する恐れのあるもの。<br>
@@ -13,7 +13,7 @@
 <strong>銃砲類、刀剣類</strong>
 </div>
 
-<font color="#ff0000">銃刀法違反にあたるもの<br>
+<font color="#ff0000">銃刀法違反にあたるもの  
 武器類とみなされるもの</font>
 
 <h3>■主な違反商品</h3>
@@ -49,8 +49,8 @@
 <strong>盗難品・不正入手</strong>
 </div>
 
-<font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font><br>
-<br>
+<font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font>
+
 盗難・万引きしたもの、拾得したものや横領したもの、盗難品であることを知りながら出品する行為は窃盗罪、詐欺罪、盗品等関与罪および横領罪などの法律で厳しく処罰されます。
 
 <h3>■主な違反商品</h3>
@@ -99,14 +99,14 @@
 <li>テレビ・ラジオの録画録音テープ<br>
 <font color="#ff0000">※ハードディスクドライブ、フラッシュメモリなどの記憶媒体、ハードディスクレコーダーや、iPodなどの携帯型音楽端末等を出品する場合は、保存されている内容をすべて削除し、出品してください。</font></li>
 </ul>
-
 </div>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>金券、有価証券</strong>
 </div>
 
-<font color="#ff0000">現金、金券類、カード類<br>
-<br>
+<font color="#ff0000">現金、金券類、カード類
+
 有形／電子を問わず、以下の商品類と、高額で金銭と同等に扱われるもの
 </font>
 
@@ -249,12 +249,12 @@
 <strong>法令に抵触する、悪用される恐れのあるもの</strong>
 </div>
 
-<font color="#ff0000">危険物や安全性に問題があるもの<br>
-<br>
-犯罪に使用される恐れのあるもの<br>
-<br>
-人体に危険を及ぼす可能性があるもの<br>
-<br>
+<font color="#ff0000">危険物や安全性に問題があるもの
+
+犯罪に使用される恐れのあるもの
+
+人体に危険を及ぼす可能性があるもの
+
 法令に抵触する状態に改造を施したもの
 </font>
 
@@ -298,8 +298,8 @@
 <br>
 2019年2月1日（金）以降は、PSEマークのないモバイルバッテリーは販売禁止（流通在庫を含む）となります。詳細は 経済産業省HP をご覧ください。</li>
 </ul>
-
 </div>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>たばこ</strong>
 </div>
@@ -320,12 +320,13 @@
 <strong>食料品、飲料品、アルコール類</strong>
 </div>
 
-<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの<br>
-<br>
+<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
+
 出品時に賞味(消費)期限を商品説明に記載するか、記載部分の写真を掲載してください。
 </font>
 
 <h3>■主な違反商品</h3>
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）</li>
@@ -377,16 +378,16 @@
 <strong>チケット類</strong>
 </div>
 
-<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット<br>
-<br>
-記名式の航空券<br>
-<br>
-使用が利用者本人に限られているもの<br>
-<br>
-手元にないチケット類<br>
-<br>
-予約番号だけなど未払い状態のチケット<br>
-<br>
+<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
+
+記名式の航空券
+
+使用が利用者本人に限られているもの
+
+手元にないチケット類
+
+予約番号だけなど未払い状態のチケット
+
 その他、上記と同等とみなされるもの
 </font>
 
@@ -414,8 +415,8 @@
 <strong>危険なもの</strong>
 </div>
 
-<font color="#ff0000">発火性のあるもの<br>
-<br>
+<font color="#ff0000">発火性のあるもの
+
 武器として使用される恐れのあるもの</font>
 
 <h3>■主な違反商品</h3>
@@ -475,8 +476,8 @@
 <strong>自己名義でない・所有者の変更登録ができない</strong>
 </div>
 
-<font color="#ff0000">自己名義でないもの<br>
-<br>
+<font color="#ff0000">自己名義でないもの
+
 所有者の変更ができないまたは時間がかかるもの</font>
 
 <h3>■主な違反商品</h3>
@@ -625,6 +626,7 @@
 </div>
 
 <h3>■主な違反商品</h3>
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>全ての生体</li>
@@ -637,10 +639,10 @@
 <strong>物品ではないもの</strong>
 </div>
 
-<font color="#ff0000">ゲームアカウントやゲーム内の通貨<br>
-<br>
-アイテムなどの電子データ<br>
-<br>
+<font color="#ff0000">ゲームアカウントやゲーム内の通貨
+
+アイテムなどの電子データ
+
 情報、サービスの提供など
 </font>
 
@@ -671,6 +673,7 @@
 </div>
 
 <h3>■主な違反商品</h3>
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>商品が手元にない</li>
@@ -703,12 +706,12 @@
 <strong>携帯電話端末について</strong>
 </div>
 
-<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末<br>
-<br>
-残債がある携帯端末、契約中の携帯端末</font><br>
-<br>
-出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。<br>
-<br>
+<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
+
+残債がある携帯端末、契約中の携帯端末</font>
+
+出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。
+
 残債がある、契約中である、名義を変更できないものは、トラブルの原因となるため、お取引をご遠慮ください。
 
 <h3>■主な違反商品</h3>
@@ -780,4 +783,5 @@
 <li>その他、コネポケが取扱いを不適切と判断したもの</li>
 </ul>
 </div>
+
 <hr>
