--- a/5.利用規約など/ルールとマナー/5.迷惑行為・荒らし行為について.md
+++ b/5.利用規約など/ルールとマナー/5.迷惑行為・荒らし行為について.md
@@ -1,8 +1,8 @@
 <h3>迷惑行為・荒らし行為について</h3>
 <hr>
 
-<font color="#ff0000">迷惑行為や荒らし行為に該当するコメントをされたり、発見した場合、問題のあるコメントが書かれている対象商品ページより「通報」ください。</font><br>
-<br>
+<font color="#ff0000">迷惑行為や荒らし行為に該当するコメントをされたり、発見した場合、問題のあるコメントが書かれている対象商品ページより「通報」ください。</font>
+
 コネポケのガイドおよび利用規約に違反している可能性のあるコメントは、以下の手順でご報告ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
