--- a/4.カテゴリから探す/2.引取について/6.禁止出品物をみつけたら.md
+++ b/4.カテゴリから探す/2.引取について/6.禁止出品物をみつけたら.md
@@ -1,8 +1,9 @@
 <h3>禁止出品物をみつけたら</h3>
 <hr>
+
 <font color="#ff0000">禁止出品物を見つけたら対象商品の商品ページから通報を行なってください。
-</font><br>
-<br>
+</font>
+
 コネポケのガイドおよび利用規約に違反している可能性のある商品は、以下の手順でご報告ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
