--- a/4.カテゴリから探す/4.レスについて/5.コネポケで禁止されている行為.md
+++ b/4.カテゴリから探す/4.レスについて/5.コネポケで禁止されている行為.md
@@ -2,11 +2,11 @@
 <hr>
 
 <font color="#ff0000">コネポケを安心・安全にご利用いただくため、コネポケの<strong>「禁止されている行為」</strong>をご確認ください。
-</font><br>
+</font>
 
 <h3>禁止行為が確認された場合はアカウントの停止などの対応をさせていただきます。</h3>
 
-以下のような行為を見かけた、持ちかけられた場合は、コネポケ事務局にご連絡ください。<br>
+以下のような行為を見かけた、持ちかけられた場合は、コネポケ事務局にご連絡ください。
 
 <hr color="#008dd7">
 
@@ -16,8 +16,8 @@
 <strong>コネポケで用意された以外の取引手段を利用および促すこと</strong>
 </div>
 
-<font color="#ff0000">コネポケでは、本人確認を行いプレミアム会員に登録することで安全な取引方法をご用意しています。<br>
-<br>
+<font color="#ff0000">コネポケでは、本人確認を行いプレミアム会員に登録することで安全な取引方法をご用意しています。
+
 コネポケを利用せずに取引をした場合、相手の素性が分からない、または商品に対してお金を要求された、個人情報を悪用されたなどのトラブルになってしまう危険性があります。
 </font>
 
@@ -202,8 +202,8 @@
 <strong>引取りをする意思がなく取引を申し込むこと</strong>
 </div>
 
-<font color="#ff0000">引取りをする意思がなく取引を申し込むことを禁止します。<br>
-<br>
+<font color="#ff0000">引取りをする意思がなく取引を申し込むことを禁止します。
+
 また、コメントで商品の詳細を確認せずむやみに「取引申し込み」をすることはお控えください。
 </font>
 
@@ -231,7 +231,7 @@
 <strong>常識から逸脱した商品をリクエストをすること</strong>
 </div>
 
-<h3> ■主な違反行為</h3>
+<h3>■主な違反行為</h3>
 
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
@@ -253,8 +253,8 @@
 <strong>取引メッセージで決めた以外の方法で配送をすること</strong>
 </div>
 
-<font color="#ff0000">商品の配送については配送料が発生するため、お互いに認識を一致させることをお勧めします。<br>
-<br>
+<font color="#ff0000">商品の配送については配送料が発生するため、お互いに認識を一致させることをお勧めします。
+
 ※配送については自己責任ですので、コネポケでサポートや対応は一切しておりません。
 </font>
 
@@ -266,10 +266,10 @@
 <strong>外部サービスなどに誘導する行為</strong>
 </div>
 
-<font color="#ff0000">あらゆるトラブルを防止するため、コネポケ以外のサイトなどへ誘導する行為全般を禁止します。<br>
-<br>
-外部での取引については事務局でのサポート対象外となります。<br>
-<br>
+<font color="#ff0000">あらゆるトラブルを防止するため、コネポケ以外のサイトなどへ誘導する行為全般を禁止します。
+
+外部での取引については事務局でのサポート対象外となります。
+
 外部での取引やメッセージのやりとりを求められたらすぐに事務局にご連絡ください。
 </font>
 
@@ -301,8 +301,8 @@
 <strong>迷惑行為</strong>
 </div>
 
-<font color="#ff0000">お客さまの利用やサービスの運営の妨げになる迷惑行為を禁止します。<br>
-<br>
+<font color="#ff0000">お客さまの利用やサービスの運営の妨げになる迷惑行為を禁止します。
+
 お客さまの安心・安全のために、以下の行為を発見した場合はアカウント停止などの対応を行います。
 </font>
 
@@ -362,8 +362,8 @@
 <strong>事務局で不適切と判断される行為</strong>
 </div>
 
-<font color="#ff0000">以下に該当する行為やその他事務局の判断により不適切とみなされる行為は禁止します。<br>
-<br>
+<font color="#ff0000">以下に該当する行為やその他事務局の判断により不適切とみなされる行為は禁止します。
+
 これらの行為を発見した場合は、ご利用の制限や出品・投稿の削除をいたします。
 </font>
 
@@ -436,6 +436,7 @@
 <li>他のユーザーまたは第三者が、理解することができなかったり、誤解や混乱をするおそれのある行為</li>
 </ul>
 </div>
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <strong>【弊社またはコネポケに損害を与える行為】</strong><br>
