--- a/4.カテゴリから探す/3.リクエストについて/2.約束をしたのに相手が来ない.md
+++ b/4.カテゴリから探す/3.リクエストについて/2.約束をしたのに相手が来ない.md
@@ -1,12 +1,14 @@
 <h3>約束をしたのに相手が来ない</h3>
 <hr>
-不適切な対応をされるユーザーがいらっしゃる場合、問題発生となった対象商品ページより詳細内容を記載の上、<font color="#ff0000">［通報］</font>から詳細をお知らせください。<br>
-<br>
+
+不適切な対応をされるユーザーがいらっしゃる場合、問題発生となった対象商品ページより詳細内容を記載の上、<font color="#ff0000">［通報］</font>から詳細をお知らせください。
+
 コネポケのガイドおよび利用規約に違反している可能性のある相手ユーザーは、以下の手順でご報告ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>通報の手順</strong>
 </div>
+
 <ol>
 <li>問題発生となった対象商品を選択し、［通報］をタップ</li>
 <br>
@@ -31,8 +33,8 @@
 </ul>
 </div>
 
-コネポケ事務局にて内容を確認させていただき、適切に対応いたします。<br>
-<br>
+コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
+
 <font color="#ff0000">※悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
 
 <hr>
