--- a/4.カテゴリから探す/3.リクエストについて/5.商品写真を編集したい.md
+++ b/4.カテゴリから探す/3.リクエストについて/5.商品写真を編集したい.md
@@ -1,5 +1,6 @@
 <h3>商品写真を編集したい</h3>
 <hr>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>写真の編集方法</strong>
 </div>
@@ -7,7 +8,7 @@
 <ul>
 <li>商品写真の編集は、画像の切り抜き（トリミング）のみ可能です。</li>
 <br>
-<li>出品画像の1回目のアップロード時に、編集いただけます。<br>
+<li>リクエスト画像の1回目のアップロード時に、編集いただけます。<br>
 1度確定すると画像の再編集はできませんので、写真を削除後、再度アップロードください。</li>
 <br>
 <li>すでにリクエストした商品の編集はできません。<br>
