--- a/2.はじめてガイド/4.レスする/2.レスするには/2.レス時の注意点.md
+++ b/2.はじめてガイド/4.レスする/2.レスするには/2.レス時の注意点.md
@@ -1,16 +1,25 @@
-# レス時の注意点
+<h3>レス時の注意点</h3>
+<hr>
 
-リクエスト商品にレスポンスをする時は以下のことに注意してください。
+<h3>リクエスト商品にレスポンスをする時は以下のことに注意してください。</h3>
 
-* リクエスト商品の［欲しい商品のイメージ画像・商品名・商品説明・商品詳細］をよくお読みください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>レスポンスの注意点</strong>
+</div>
 
-* リクエストにレスポンスできそうな商品をお持ちの場合、まずはリクエスト者様にコメントをしてください。
+<ul>
+<li>リクエスト商品の［欲しい商品のイメージ画像・商品名・商品説明・商品詳細］をよくお読みください。</li>
+<br>
+<li>リクエストにレスポンスできそうな商品をお持ちの場合、まずはリクエスト者様にコメントをしてください。</li>
+<br>
+<li>リクエスト商品に対して送信できるコメントは、写真や画像を添付できる機能がございます。<br>
+<font color="ff0000">文字だけの説明ですと伝わりにくいこともありますので、お持ちの商品画像を撮って、レス前にコメント欄に添付することおすすめします。</font></li>
+<br>
+<li>リクエスト商品に関係のない物や、商品が違いすぎるもの等をレスポンスするとトラブルの元となりますのでお控えください。</li>
+<br>
+<li>リクエスト者様が引取りを希望していないにも関わらず、取引を一方的に進める行為は違反行為になります。</li>
+</ul>
 
-* リクエスト商品に対して送信できるコメントは、写真や画像を添付できる機能がございます。  
-文字だけの説明ですと伝わりにくいこともありますので、お持ちの商品画像を撮って、レス前にコメント欄に添付することおすすめします。
+<font color="#ff0000">※コネポケを安心して気持ちよくご利用いただくために、ルールとマナーを守ってご利用ください。</font>
 
-* リクエスト商品に関係のない物や、商品が違いすぎるもの等をレスポンスするとトラブルの元となりますのでお控えください。
-
-* リクエスト者様が引取りを希望していないにも関わらず、取引を一方的に進める行為は違反行為になります。
-
-※コネポケを安心して気持ちよくご利用いただくためにルールとマナーを守ってご利用ください。
+<hr>
