--- a/2.はじめてガイド/4.レスする/2.レスするには/1.レスの流れ.md
+++ b/2.はじめてガイド/4.レスする/2.レスするには/1.レスの流れ.md
@@ -1,21 +1,40 @@
-# レスの流れ
+<h3>レスの流れ</h3>
+<hr>
 
-レスポンスするには会員登録、ログインが必要です。
+<h3>レスポンスするには会員登録、ログインが必要です</h3>
 
-1. リクエスト商品と一致した商品をお持ちでしたら、コメント機能を利用し、商品の詳細など、コメント機能でリクエスト者様に連絡してあげましょう。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>レスポンスの手順</strong>
+</div>
 
-   ※コメント機能は全てのユーザ様が閲覧できますので、個人情報等の記載はしないようご注意ください）
+<ol>
+<li>リクエスト商品と一致した商品をお持ちでしたら、コメント機能を利用し、商品の詳細など、コメント機能でリクエスト者様に連絡してあげましょう。<br>
+<br>
+<font color="ff0000"><strong>※コメント機能は全てのユーザ様が閲覧できますので、個人情報等の記載はしないようご注意ください</strong></font></li>
+<br>
+<li>条件が合えば<strong>【レスポンス（あげます）】</strong>ボタンをタップする。</li>
+<br>
+<li>商品の受渡し方法や場所、日時などを「取引メッセージ」で相談しましょう。<br>
+<font color="ff0000">※取引メッセージは取引相手以外は閲覧できません。</font></li>
+</ol>
 
-1. 条件が合えば【**レスポンス（あげます）**】ボタンをタップ
+また、配送で取引を行う場合は、トラブル防止のため、以下の内容の確認を行ない、ユーザ様同士で認識を一致させてください。
 
-1. 商品の受渡し方法や場所、日時などを「取引メッセージ」で相談しましょう。
+<div style="padding: 3px 15px 3px 0px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ul>
+<li>配送料の負担について</li>
+<li>配送の代金について</li>
+<li>配送業者の確認</li>
+<li>梱包の仕方について<br>
+<br>
+配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［レスする］＞［配送について］＞［配送時の注意］をご確認ください。</li>
+</ul>
+</div>
 
-   - 取引メッセージの送信方法は、【取引メッセージでやり取りをする】でご確認ください。
+<ol start="4">
+<li>取引メッセージで決めた方法で商品を渡し、取引完了です。</li>
+<br>
+<li>良いお取り引きが出来ましたら、<strong>「いいね！」</strong>で相手ユーザ様を評価してあげましょう。</li>
+</ol>
 
-   - 取引メッセージは取引相手以外は閲覧できません。
-
-   - 配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［レスする］＞［配送について］＞［配送時の注意］をご確認ください。
-
-1. 取引メッセージで決めた方法で商品を渡し、取引完了です。
-
-1. 良いお取り引きが出来ましたら、「いいね！」で相手ユーザ様を評価してあげましょう。
+<hr>
