--- a/2.はじめてガイド/4.レスする/2.レスするには/3.画像や写真の送信について.md
+++ b/2.はじめてガイド/4.レスする/2.レスするには/3.画像や写真の送信について.md
@@ -1,9 +1,25 @@
-# 画像や写真の送信について
+<h3>画像や写真の送信について</h3>
+<hr>
 
 リクエスト商品にレスポンスをする場合はコメント欄から写真や画像を添付できる機能がございます。
 
-ホーム画面の【リクエスト】商品欄から気になるリクエスト商品をタップ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>画像や写真の送信手順</strong>
+</div>
 
-リクエスト商品の下部のコメント記入欄の右の［**プラスマーク**］`をタップすると写真や画像を添付することができます。
-  
-コメントで文字だけの説明では伝わりにくいこともございますので、写真や画像を添付することをおすすめします。
+<ol>
+<li>ホーム画面の【リクエスト】商品欄から気になるリクエスト商品をタップする。</li>
+<br>
+<li>リクエスト商品の下部のコメント記入欄にある<strong>［アイコン］</strong>をタップすると写真や画像を添付することができます。</li>
+</ol>
+
+<font color="ff0000">コメントで文字だけの説明では伝わりにくいこともございますので、写真や画像を添付することをおすすめします。</font>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;"><font color="ff0000">
+直接関係のない商品画像や手元にない商品の写真、画像の送信はコネポケのガイドおよび利用規約に違反する行為となります。<br>
+<br>
+悪質なユーザーの場合はアカウント停止などを検討させていただきます。
+</font>
+</div>
+
+<hr>
