--- a/2.はじめてガイド/2.引取する/2.引取するには/2.引取時の注意点.md
+++ b/2.はじめてガイド/2.引取する/2.引取するには/2.引取時の注意点.md
@@ -1,16 +1,39 @@
-# 引取時の注意点  
-  
+<h3>引取時の注意点</h3>
+<hr>
+
 取引申し込み後は取引をキャンセルすることができません。
 
 取引申し込みをされる際は、下記の点にご注意ください。
 
-   ・コメントで出品者様とやりとりされましたか？
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>コメントで出品者様とやりとりされましたか？</li>
+<li>商品説明をご覧になりましたか？</li>
+<li>商品状態について相違はございませんか？</li>
+<li>配送希望の場合は、送料の負担者を確認なされましたか？</li>
+</ul>
+</div>
 
-   ・商品説明をご覧になりましたか？
+お互いの認識の違いによるトラブルを防ぐためにも、下記の内容を<font color="#ff0000">［商品ページ］</font>で確認し、不明な点は<font color="#ff0000">［コメント機能］</font>で出品者に確認し、ご納得いただいたうえで取引申し込みを行ってください。
 
-   ・商品状態について相違はございませんか？
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>商品の写真</li>
+<li>商品の詳細説明</li>
+<li>サイズ</li>
+<li>商品の状態（汚れ・傷の状態や動作・非動作の状況等）</li>
+<li>取引地域</li>
+<li>取引希望日・取引時間</li>
+<li>取引方法（配送方法・配送料金）</li>
+</ul>
+</div>
 
-   ・配送希望の場合は、送料の負担者を確認なされましたか？
+<font color="#ff0000"><strong>※コメント機能は全てのユーザ様が閲覧できますので、個人情報等の記載はしないようご注意ください</strong></font>
 
-商品の詳細や不明点など、［コメント機能］で出品者に確認し、ご納得いただいたうえで取引申し込みを行ってください。  
-（コメント機能は全てのユーザ様が閲覧できますので、個人情報等の記載はしないようご注意ください）
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>配送で取引を行う場合はご確認ください</strong>
+</div>
+
+配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［レスする］＞［配送について］＞［配送時の注意］をご確認ください。
+
+<hr>
