--- a/2.はじめてガイド/2.引取する/2.引取するには/1.引取までの流れ.md
+++ b/2.はじめてガイド/2.引取する/2.引取するには/1.引取までの流れ.md
@@ -1,27 +1,43 @@
-# 引取までの流れ
+<h3>引取までの流れ</h3>
+<hr>
 
-引取するにはプレミアム会員登録、ログインが必要です
+<h3>引取するにはプレミアム会員登録、ログインが必要です</h3>
 
-1. 欲しい商品を一覧から探しましょう。  
-気になる商品には［お気に入り］ができます。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>引取までの手順</strong>
+</div>
 
-   ※お気に入りした商品はサイドメニューの［お気に入り］一覧から確認できます。
+<ol>
+<li>欲しい商品を一覧から探しましょう。<br>
+気になる商品には［お気に入り］ができます。<br>
+<font color="ff0000">※お気に入りした商品はサイドメニューの［お気に入り］から確認できます。</font></li>
+<br>
+<li>引き取りたい商品が見つかったら、商品の詳細や不明点など、コメント機能で出品者に確認しましょう。<br>
+<font color="ff0000"><strong>※コメント機能は全てのユーザ様が閲覧できますので、個人情報等の記載はしないようご注意ください</strong></font></li>
+<br>
+<li>条件が合えば<strong>【取引を申し込む】</strong>ボタンをタップする。</li>
+<br>
+<li>商品の受渡し方法や場所、日時などを［取引メッセージ］で相談しましょう。<br>
+<font color="ff0000">※取引メッセージは取引相手以外は閲覧できません。</font></li>
+</ol>
 
-1. 引き取りたい商品が見つかったら、商品の詳細や不明点など、コメント機能で出品者に確認しましょう。  
-（コメント機能は全てのユーザ様が閲覧できますので、個人情報等の記載はしないようご注意ください）
+また、配送で取引を行う場合は、トラブル防止のため、以下の内容の確認を行ない、ユーザ様同士で認識を一致させてください。
 
-1. 条件が合えば【**取引を申し込む**】ボタンをタップ
+<div style="padding: 3px 15px 3px 0px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ul>
+<li>配送料の負担について</li>
+<li>配送の代金について</li>
+<li>配送業者の確認</li>
+<li>梱包の仕方について<br>
+<br>
+配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［レスする］＞［配送について］＞［配送時の注意］をご確認ください。</li>
+</ul>
+</div>
 
-1. 商品の受渡し方法や場所、日時などを［取引メッセージ］で相談しましょう。  
-※取引メッセージは取引相手以外は閲覧できません。
+<ol start="5">
+<li>取引メッセージで決めた方法で商品を受け取り、取引完了です。</li>
+<br>
+<li>良いお取り引きが出来ましたら、<strong>［いいね！］</strong>で相手ユーザ様を評価してあげましょう。</li>
+</ol>
 
-   また、配送で取引を行う場合は、トラブル防止のため、以下の内容の確認を行ない、ユーザ様同士で認識を一致させてください
-
-   ・配送料の負担について  
-・配送の代金について  
-・配送業者の確認  
-・梱包の仕方について
-
-1. 取引メッセージで決めた方法で商品を受け取り、取引完了です。
-
-1. 良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。
+<hr>
