--- a/2.はじめてガイド/2.引取する/2.引取するには/4.プレミアム会員について.md
+++ b/2.はじめてガイド/2.引取する/2.引取するには/4.プレミアム会員について.md
@@ -1,15 +1,26 @@
-# プレミアム会員について
+<h3>プレミアム会員について</h3>
+<hr>
 
-コネポケの全てのサービスをご利用いただける月額350円(税込）の有料サービスです。  
-出品されている商品は引き取り放題！  
-リクエストし放題！となります。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>プレミアム会員とは</strong>
+</div>
 
-   ・登録後は1ヶ月ごとの自動継続課金となります
+コネポケの全てのサービスをご利用いただける月額350円（税込）の有料サービスです。
 
-   ・次回更新日の前日までに解約していただきますと、次月から課金されません
+<font color="#008dd7">出品されている商品は引き取り放題！  
+リクエストし放題！となります。</font>
 
-   ・登録後にサービスを利用してすぐに解約することも可能です
-
-   ・登録を解除した日付にかかわらず、日割り返金はできません
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>登録後は1ヶ月ごとの自動継続課金となります</li>
+<br>
+<li>次回更新日の前日までに解約していただきますと、次月から課金されません</li>
+<br>
+<li>登録後にサービスを利用してすぐに解約することも可能です</li>
+<br>
+<li>登録を解除した日付にかかわらず、日割り返金はできません</li>
+</div>
 
 ［サイドメニュー］＞［設定］＞［ご利用中のサービス］よりプレミアム会員の登録、及び退会が可能です。
+
+<hr>
