--- a/2.はじめてガイド/4.レスする/4.配送について/3.配送時の注意点.md
+++ b/2.はじめてガイド/4.レスする/4.配送について/3.配送時の注意点.md
@@ -31,7 +31,7 @@
 </font>
 </div>
 
-上記以外にもトラブルが発生しやす例としては下記のようなことがあります。
+上記以外にもトラブルが発生しやすい例としては下記のようなことがあります。
 
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
 <span style="font-size:18px; color:#ff0000"><strong>配送するときは自宅住所を書く必要がありますか</strong></span><br>
@@ -67,9 +67,9 @@
 <font color="#ff0000">※返送されたものを、もう一度発送する場合は再度料金が発生しますので、料金の負担についても、ユーザー様同士でご確認のうえ、発送することをおすすめします。</font><br>
 <br>
 また、商品が返ってきても、引取者様と再送についての詳細や料金負担の話し合いが完了するまでは、再送をお控えすることをおすすめしております。<br>
-返送された後も「連絡がとれない」「対応してくれない」などの不適切な対応をされるユーザーがいらっしゃる場合、商品画面の<font color="#ff0000"> <strong>［通報］</strong> </font>から詳細をお知らせください。<br>
-<br>
-<font color="#ff0000">悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
+返送された後も「連絡がとれない」「対応してくれない」などの不適切な対応をされるユーザーがいらっしゃる場合、商品画面の<font color="#ff0000"><strong>［通報］</strong></font>から詳細をお知らせください。
 </div>
+
+<font color="#ff0000">悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
 
 <hr>
