--- a/2.はじめてガイド/2.引取する/6.成立後のよくある質問/2.発送の約束したのに商品が届かない.md
+++ b/2.はじめてガイド/2.引取する/6.成立後のよくある質問/2.発送の約束したのに商品が届かない.md
@@ -1,12 +1,57 @@
-# 発送の約束したのに商品が届かない
+<h3>発送の約束したのに商品が届かない</h3>
+<hr>
 
-配送については、自己責任ですのでコネポケでサポートや対応は一切しておりません。
+<font color="#ff0000"><strong>配送については、自己責任ですのでコネポケでサポートや対応は一切しておりません。</strong></font>
 
-「発送を忘れていた」「配送会社でトラブルがあった」など、様々な原因が考えられますので、取引メッセージで出品者様に状況をご確認ください。
-
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+「発送を忘れていた」「配送会社でトラブルがあった」など、様々な原因が考えられますので、取引メッセージで出品者様に状況をご確認ください。<br>
+<br>
 既に発送済みで、追跡番号や伝票番号があるようでしたら、お相手ユーザー様へお聞きいただき、利用された配送業者へ配送状況をご確認ください。
+</div>
 
-「連絡がとれない」「対応してくれない」などの不適切な対応をされるユーザーがいらっしゃる場合、
-対象商品画面の［**通報**］から詳細をお知らせください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>発生しやすいトラブル</strong>
+</div>
 
-悪質なユーザーの場合はアカウント停止などを検討させていただきます。
+発生しやすい例としては下記のようなことがあります。
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>配送するときは自宅住所を書く必要がありますか</strong></span><br>
+ユーザー様同士で話し合いをして、お互いに認識を一致させてからお決めください。<br>
+注意点としては、万が一、宛先不明で返ってくる場合に自宅住所や氏名の記載がないとトラブルになる可能性がございます。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>いつまでに発送すればいいですか</strong></span><br>
+相手ユーザー様から指定日時がない場合は早期の配送をおすすめしております。<br>
+「出品して取引が成立したけど配送を忘れていた」「レスポンスしたけど配送を忘れていた」などはトラブルの元となります。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>商品を配送したのに引取者に届かない</strong></span><br>
+商品を配送したのに、引取者に届かないという場合は、利用された配送業者へ配送状況をご確認ください。<br>
+追跡番号がある場合、配送会社の公式サイトから配送状況を確認できる場合があります。<br>
+配送後に取引メッセージで追跡番号や伝票番号を伝えておくとスムーズに確認ができトラブルの防止になります。<br>
+<br>
+また、配送トラブルがあった場合は、よく状況をご確認のうえ、双方で話し合い問題の解決を行なってください。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>送った商品が戻ってきた</strong></span><br>
+荷物が返送された場合には、以下のような理由が考えられます。<br>
+<ul>
+<li>宛先不明または転居先不明</li>
+<li>保管期間内に受け取りがなかった</li>
+<li>住所の記載に誤りがあった</li>
+</ul>
+取引メッセージで引取者様に荷物が返送されたことをお伝えいただき、住所や宛名、受け取ることが可能な時間帯等の再確認をお願いいたします。<br>
+<br>
+<font color="#ff0000">※返送されたものを、もう一度発送する場合は再度料金が発生しますので、料金の負担についても、ユーザー様同士でご確認のうえ、発送することをおすすめします。</font><br>
+<br>
+また、商品が返ってきても、引取者様と再送についての詳細や料金負担の話し合いが完了するまでは、再送をお控えすることをおすすめしております。<br>
+返送された後も「連絡がとれない」「対応してくれない」などの不適切な対応をされるユーザーがいらっしゃる場合、商品画面の<font color="#ff0000"><strong>［通報］</strong></font>から詳細をお知らせください。
+</div>
+
+<font color="#ff0000">悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
+
+<hr>
