--- a/2.はじめてガイド/2.引取する/6.成立後のよくある質問/8.取引をキャンセルしたい.md
+++ b/2.はじめてガイド/2.引取する/6.成立後のよくある質問/8.取引をキャンセルしたい.md
@@ -1,7 +1,18 @@
-# 取引をキャンセルしたい
+<h3>取引をキャンセルしたい</h3>
+<hr>
 
-取引の継続が困難な場合は、必ず相手ユーザー様にご連絡をお願いいたします。
+以下の内容をご確認のうえ、相手ユーザー様とご相談ください。
 
-取引をキャンセルする場合は必ずユーザー様同士で取引を中止することを合意されてから行って下さい。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>キャンセルは双方合意が確認できた後に行ってください</strong>
+</div>
 
-合意がない一方的なキャンセルや、約束を守らないなどの悪質な行為の通報があった場合は**アカウントの停止**を行う場合がございます。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+取引の継続が困難な場合は、必ず相手ユーザー様にご連絡をお願いいたします。<br>
+<br>
+取引をキャンセルする場合、必ずユーザー様同士で取引を中止することを合意されてから行って下さい。<br>
+<br>
+合意がない一方的なキャンセルや、約束を守らないなどの悪質な行為の通報があった場合、<font color="#ff0000"><strong>アカウントの停止</strong></font>を行う場合がございます。
+</div>
+
+<hr>
