--- a/3.よくある質問/17.お気に入りについて/2.お気に入りの解除方法について.md
+++ b/3.よくある質問/17.お気に入りについて/2.お気に入りの解除方法について.md
@@ -1,5 +1,21 @@
-# お気に入りの解除方法について
+<h3>お気に入りの解除方法について</h3>
+<hr>
 
-お気に入りを解除する際は、商品ページの`［☆お気に入り］`アイコンをタップすることで解除が可能です。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>［お気に入り］の手順</strong>
+</div>
 
-`［☆お気に入り］`アイコンが白色に変わりましたら解除されています。
+<ol>
+<li>気になる商品があったら、商品ページの<strong>［お気に入り（ハート）］</strong>アイコンをタップしてみましょう。</li>
+<br>
+<li><strong>［お気に入り］</strong>アイコンが青色に変わりましたら登録完了です。</li>
+<br>
+<li><strong>［お気に入り］</strong>登録すると<strong>［お気に入り］</strong>アイコンに数字が表示されます。</li>
+<br>
+<li><strong>［お気に入り］</strong>登録したユーザー数だけ数字が上がります。</li>
+<br>
+<li><font color="ff0000">アイコンをもう一度タップすると、<strong>［お気に入り］</strong>を解除することができます。<br>
+<strong>※［お気に入り（ハート）］</strong>アイコンが白色に変わりましたら解除されています。</font></li>
+</ol>
+
+<hr>
