--- a/3.よくある質問/17.お気に入りについて/3.お気に入りにしたら相手にわかりますか.md
+++ b/3.よくある質問/17.お気に入りについて/3.お気に入りにしたら相手にわかりますか.md
@@ -1,7 +1,23 @@
-# お気に入りにしたら相手にわかりますか
+<h3>お気に入りにしたら相手にわかりますか</h3>
+<hr>
 
-［お気に入り］登録すると［お気に入り］アイコンに数字が表示されます。
+<font color="ff0000"><strong>どのユーザー様がお気に入り登録されたか、投稿者様には分かりません。</strong></font>
 
-［お気に入り］登録したユーザー数だけ数字が上がります。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>［お気に入り］の手順</strong>
+</div>
 
-どのユーザー様がお気に入り登録されたかは出品者様には分かりません。  
+<ol>
+<li>気になる商品があったら、商品ページの<strong>［お気に入り（ハート）］</strong>アイコンをタップしてみましょう。</li>
+<br>
+<li><strong>［お気に入り］</strong>アイコンが青色に変わりましたら登録完了です。</li>
+<br>
+<li><strong>［お気に入り］</strong>登録すると<strong>［お気に入り］</strong>アイコンに数字が表示されます。</li>
+<br>
+<li><strong>［お気に入り］</strong>登録したユーザー数だけ数字が上がります。</li>
+<br>
+<li>アイコンをもう一度タップすると、<strong>［お気に入り］</strong>を解除することができます。<br>
+<strong>※［お気に入り（ハート）］</strong>アイコンが白色に変わりましたら解除されています。/li>
+</ol>
+
+<hr>
