--- a/2.はじめてガイド/5.会員登録・ログインについて/4.SMS番号認証について/3.認証した携帯番号は公開されますか.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/4.SMS番号認証について/3.認証した携帯番号は公開されますか.md
@@ -1,4 +1,8 @@
-# 認証した携帯番号は公開されますか
+<h3>認証した携帯番号は公開されますか</h3>
+<hr>
 
-認証した携帯番号が公開されることはありません。  
-ご安心くださいませ。
+<h3><font color="ff0000">認証した携帯番号が公開されることはありません。</font></h3>
+
+新規登録時に入力いただいた個人情報が公開されることは一切ありません。  ご安心ください。
+
+<hr>
