--- a/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/2.会員登録ができない.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/2.会員登録ができない.md
@@ -1,33 +1,49 @@
-# 会員登録ができない
+<h3>会員登録ができない</h3>
+<hr>
 
 新規会員登録ができない場合、以下の原因が考えられます。
 
-### 1.入力した電話番号が既に登録されている。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>１.入力した電話番号が既に登録されている</strong>
+</div>
 
-コネポケに既に登録されている電話番号の場合、「この番号は既に登録されています」と表示されます。
+コネポケに既に登録されている電話番号の場合、<font color="#ff0000">「この番号は既に登録されています」</font>と表示されます。
 
-コネポケへ一度も登録した覚えがない場合、電話番号を以前利用されていた方、もしくはご家族やご友人が、コネポケへご登録いただく際にお客さまの電話番号を使用された可能性が考えられます。
+コネポケへ一度も登録した覚えがない場合、同様の電話番号を以前利用されていた方、もしくは、ご家族やご友人がコネポケへご登録いただく際に、お客さまの電話番号を使用された可能性が考えられます。
 
-お心あたりがない場合は、下記の内容を添えて、コネポケ事務局へお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+お心あたりがない場合は、下記の内容を添えてコネポケ事務局へお問い合わせください。
 
-    ・本名（フルネーム）  
-    ・ご住所（番地まで）  
-    ・メールアドレス  
-    ・携帯電話番号  
-    ・携帯電話番号の利用開始時期
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>ご本名（フルネーム）</li>
+<li>ご住所（番地まで）</li>
+<li>メールアドレス</li>
+<li>携帯電話番号</li>
+<li>携帯電話番号の利用開始時期<br>
+<br>
+<font color="#ff0000">※電話番号が既に登録されていて、会員登録ができない旨もお伝え下さい。</font></li>
+</ul>
+</div>
 
-   電話番号が既に登録されていて、会員登録ができない旨もお伝え下さい。
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
 
-なお、利用できるアカウントは一つのみのため、以前登録していた方は新たに登録することはできません。  
+なお、利用できるアカウントは一つのみのため、以前登録していた方は新たに登録することはできません。
+
 退会後に再度利用を希望する場合は、過去のアカウントを復活させる対応となります。
 
-### ２.パスワードが入力条件にあっていない。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>２.パスワードが入力条件にあっていない</strong>
+</div>
 
 パスワードは、以下の条件を満たす文字列で設定いただく必要がございます。
 
-   ・半角英数字が混在したもの  
-   ・記号は「.（ドット）」「_（アンダーバー）」以外は使用できません  
-   ・8文字以上、20文字以内  
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>半角英数字が混在したもの</li>
+<li>記号は「.（ドット）」「_（アンダーバー）」以外は使用できません</li>
+<li>8文字以上、20文字以内<br>
+<font color="#ff0000">※カナ、スペースは使用できません。</font></li>
+</ul>
+</div>
 
-    ※カナ、スペースは使用できません。
+<hr>
