--- a/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/6.パスワードの再設定ができない.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/6.パスワードの再設定ができない.md
@@ -1,9 +1,17 @@
-# パスワードの再設定ができない  
+<h3>パスワードの再設定ができない</h3>
+<hr>
 
 パスワードは、以下の条件を満たす文字列で設定いただく必要がございます。
 
-・半角英数字が混在したもの  
-・記号は「.（ドット）」「_（アンダーバー）」以外は使用できません  
-・8文字以上、20文字以内  
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>半角英数字が混在したもの</li>
+<br>
+<li>記号は「.（ドット）」「_（アンダーバー）」以外は使用できません</li>
+<br>
+<li>半角英数字8文字以上、20文字以内<br>
+<font color="#ff0000">※カナ、スペースは使用できません。</font></li>
+</ul>
+</div>
 
-※カナ、スペースは使用できません。
+<hr>
