--- a/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/1.会員登録の流れ.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/1.会員登録の流れ.md
@@ -1,39 +1,105 @@
-# 会員登録の流れ
+<h3>会員登録の流れ</h3>
+<hr>
 
-## ■新規会員登録
+<h3>■新規会員登録とは</h3>
 
-コネポケでは、ご利用ユーザ様の安全・安心な取引のため、【**閲覧**】以外のサービスのご利用には、ご利用者様ご本人の情報をご登録いただいております。
+コネポケでは、ご利用ユーザ様の安全・安心な取引のため、<strong>【閲覧】</strong>以外のサービスのご利用には、ご利用者様ご本人の情報をご登録いただいております。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>新規会員登録の手順</strong>
+</div>
+
+PCブラウザをご利用の方は画面右上に<font color="008dd7">［会員登録（無料）］</font>ボタンがありますので、<font color="008dd7">［会員登録（無料）］</font>ボタンをクリックして、下記4からとなります。
+
+<ol>
+<li>Home画面の［三］をタップ</li>
+<br>
+<li>サイドメニューの［ログイン］をタップ</li>
+<br>
+<li>ログイン画面の<font color="ff0000">［会員登録（無料）］</font>をタップ</li>
+<br>
+<li>［携帯電話番号］と［パスワード］［パスワード確認］を入力<br>
+<font color="ff0000">※必ずご本人様の携帯電話番号を入力してください</font></li>
+<br>
+<li>［SMS送信］をタップ</li>
+<br>
+<li>携帯電話のSMSに届いたSMS認証コードを入力してください<br>
+<font color="ff0000">※SMS送信をタップする前に、ご本人様の携帯電話番号で合っていることを必ずご確認ください</font></li>
+<br>
+<li>利用規約を確認のうえ、<strong>［利用規約に同意します。］</strong>にチェックをいれる<br>
+<font color="ff0000">※必ず利用規約をご確認ください</font></li>
+<br>
+<li>［次へ］をタップ</li>
+<br>
+<li>新規会員登録情報を入力して［登録する］をタップで登録が完了となります。</li>
+<br>
+<li>登録完了後に本人確認書類のアップロード画面に切り替わります。<br>
+<font color="ff0000">※コネポケには本人確認書類の提出が必要なサービスがあります。</font><br>
+<br>
+［後で］をタップでHome画面に進むこともできますが、スムーズな取引するために新規会員登録時の本人確認書類のアップロードをおすすめしております。</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>新規会員登録</strong>
+</div>
 
 新規会員登録時には、以下の情報のご登録が必要です。
 
-    ・姓名、フリガナ  
-    ・性別  
-    ・生年月日  
-    ・ご住所  
-    ・メールアドレス
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>携帯電話番号</li>
+<li>姓名、フリガナ</li>
+<li>性別</li>
+<li>生年月日</li>
+<li>ご住所</li>
+<li>メールアドレス</li>
+</ul>
+</div>
 
-※本人情報の登録はそれぞれ「初回のみ」です。  
-ご利用のたびに登録いただく必要はありません
+<h3>登録について</h3>
 
-※一度登録いただいた本人情報は、ご住所、メールアドレス以外は変更できません。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>本人情報の登録はそれぞれ「初回のみ」です。<br>
+ご利用のたびに登録いただく必要はありません。</li>
+<br>
+<li>一度登録いただいた本人情報は、電話番号、ご住所、メールアドレス以外は変更できません。</li>
+<br>
+<li>変更する場合は、本人確認書類の提出が必要になりますので、ご注意ください。</li>
+</ul>
+</div>
 
-※変更する場合は、本人確認書類の提出が必要になりますので、ご注意ください。
-
-## ■本人確認書類の登録
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>本人確認書類の登録</strong>
+</div>
 
 また、上記の情報をご入力後、身分証アップロードによるご本人様確認ページが表示されます。
 
-本人確認書類によるご本人様認証は後からでも可能ですが、以下のタイミングでご登録が必要です。
+本人確認書類によるご本人様認証は後からでも可能ですが、以下のいづれかのタイミングでご登録が必要です。
 
-   ・出品されている商品への初回取引申し込み時
-   ・初回レスポンス時
-   ・初回リクエスト時
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>出品されている商品への初回取引申し込み時</li>
+<li>初回レスポンス時</li>
+<li>初回リクエスト時</li>
+<li>初回コメント時</li>
+<li>初回通報時</li>
+</ul>
+</div>
 
-- 本人確認書類による認証は「初回のみ」です。  
-ご利用のたびに登録いただく必要はありません。
+<h3>登録について</h3>
 
-- 確認処理には3営業日程度のお時間をいただく場合がございます。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>本人確認書類による認証は「初回のみ」です。<br>
+ご利用のたびに登録いただく必要はありません。</li>
+<br>
+<li>確認処理には3営業日程度のお時間をいただく場合がございます。</li>
+<br>
+<li>認証済みのユーザ様は、マイページに<strong>【認証マーク】</strong>が表示されます。</font></li>
+</ul>
+</div>
 
-- 認証済みのユーザ様は、マイページに **【認証マーク**】が表示されます
+※利用できる本人確認書類については、［はじめてガイド］の［会員登録・ログインついて］＞［本人確認書類について］＞<font color="#ff0000"><strong>［利用できる本人確認書類について］</strong></font>をご確認ください。
 
-- 利用できる本人確認書類については、［はじめてガイド］の［会員登録・ログインついて］＞［本人確認書類について］＞［**利用できる本人確認書類について**］をご確認ください。
+<hr>
