--- a/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/7.機種変更をする際の注意.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/2.会員登録・ログインについて/7.機種変更をする際の注意.md
@@ -1,12 +1,16 @@
-# 機種変更をする際の注意
+<h3>機種変更をする際の注意</h3>
+<hr>
 
-携帯が変わっても、引き続き同じデータを利用できますので、
-**誤って新規登録をしないよう**、ご注意ください。
+携帯が変わっても、引き続き同じデータを利用できますので、<font color="#ff0000"><strong>誤って新規登録をしないよう</strong></font>ご注意ください。
 
 機種変更後は、再度ログインが必要になりますが、引き続き同じデータをご利用いただけます。
 
 機種変更後に再度ログインするときは、機種変更前に認証した携帯番号とパスワードでログインください。
 
-### ■新しい端末からログインするには
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>新しい端末からログインするには</strong>
+</div>
 
 新しい端末にコネポケをインストールし、アプリ起動後、機種変更前に認証した「携帯電話番号」と「パスワード」でログインください。
+
+<hr>
