--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/7.機能について/3.いいね！とは.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/7.機能について/3.いいね！とは.md
@@ -1,11 +1,22 @@
-# いいね！とは
+<h3>いいね！とは</h3>
+<hr>
 
-［いいね！］は取引が完了した後に取引相手のユーザー様を評価できる機能です。
+<strong>［いいね！］</strong>は取引が完了した後に、<font color="#ff0000">取引相手のユーザー様を評価</font>できる機能です。
 
-［いいね！］は取引が成立後に出品者へ［いいね！］ができるようになります。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>いいね！の手順</strong>
+</div>
 
-サイドメニューの［履歴］＞［対象商品ページ］の［**いいね！**］をタップすると［いいね！］ができます。  
+<strong>［いいね！］</strong>は取引が完了した後に、下記の手順でおこなえます。
 
-１つの取引に対して、１ユーザーしか［いいね！］することができません。
+<ol>
+<li>サイドメニューの［履歴・取引メッセージ］から取引成立した商品画像をタップ</li>
+<br>
+<li>取引情報が表示されますので、ページ内の<strong>［いいね！］</strong>をタップすると<strong>［いいね！］</strong>ができます。</li>
+<br>
+<li>１つの取引に対して、１ユーザーしか<strong>［いいね！］</strong>することができません。</li>
+<br>
+<li><strong>［いいね！］</strong>の数は<font color="#ff0000">［マイページ］</font>から確認をすることができます。</li>
+</ol>
 
-［いいね！］は`［プロフィールページ］`から確認をすることができます。
+<hr>
