--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/7.機能について/4.取引メッセージについて.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/7.機能について/4.取引メッセージについて.md
@@ -1,13 +1,40 @@
-# 取引メッセージについて
+<h3>取引メッセージについて</h3>
+<hr>
 
-取引メッセージは取引成立後にユーザー様同士で連絡ができるツールです。
+取引メッセージは取引成立後にユーザー様同士で非公開で連絡ができるツールです。
 
-引取住所、待ち合わせ場所、時間などをメッセージで決めていただけます。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>取引メッセージのご利用について</strong>
+</div>
 
-取引メッセージは他のユーザー様には開示されません。
+<ul>
+<li>引取住所、待ち合わせ場所、時間などをチャットでやりとりし、決めていただけます。</li>
+<br>
+<li>取引メッセージは他のユーザー様には開示されません。</li>
+<br>
+<li>最新取引メッセージから２週間経過すると取引メッセージはご利用できなくなります。<br>
+<br>
+<font color="ff0000">※初めての知らない相手との取引です。<br>
+　心遣いを忘れず、丁寧な言葉を心がけましょう。</font></li>
+</ul>
 
-最新取引メッセージから２週間経過すると取引メッセージはご利用できなくなります。
+<hr>
 
-※初めての知らない相手との取引です。  
-心づかいを忘れず、丁寧な言葉を心がけましょう。  
-不快なコメントや規約違反はアカウント停止になることがあります。
+不快なメッセージや規約違反はアカウント停止になることがあります。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>【通報できる内容】</strong>
+</div>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>不適切なコメント</li>
+<li>規約に違反する出品</li>
+<li>規約に違反する行為</li>
+<li>法令違反の報告</li>
+<li>悪質ユーザーの報告</li>
+<li>その他</li>
+</ul>
+</div>
+
+<hr>
