--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/10.認証した携帯番号の確認方法.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/10.認証した携帯番号の確認方法.md
@@ -1,9 +1,14 @@
-# 認証した携帯番号の確認方法
+<h3>認証した携帯番号の確認方法</h3>
+<hr>
 
-コネポケの店舗登録で認証されている電話番号は、ご担当者様の携帯電話番号となり、コネポケサイト内で表示している箇所はございません。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+コネポケで認証された電話番号は、ご自身のお使いの携帯電話番号となり、コネポケサイト内で表示している箇所はございません。<br>
+<br>
+ご自身の携帯電話番号がご不明な際は、端末本体でご確認ください。
+</div>
 
-電話番号の変更があった場合は、ガイド＆ヘルプの
+電話番号の変更があった場合は、ガイド＆ヘルプをご参考に変更手続きをお願いいたします。
 
-［はじめてガイド］＞［店舗掲載登録・ログインについて］＞［店舗登録・ログインについて］の【登録電話番号の変更方法】
+［はじめてガイド］＞［会員登録・ログインについて］＞［会員登録・ログインについて］の【登録電話番号の変更方法】
 
-をご参考に変更手続きをお願いいたします。  
+<hr>
