--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/9.登録電話番号の変更方法.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/9.登録電話番号の変更方法.md
@@ -1,19 +1,54 @@
-# 登録電話番号の変更方法
+<h3>登録電話番号の変更方法</h3>
+<hr>
 
-ご担当者様の登録電話番号は以下の手順で変更できます。
+登録電話番号は以下の手順で変更できます。
 
-### ■iOS、Androidアプリをご利用の場合
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. TOP画面左上の［三］を選択
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［設定］をタップ</li>
+<br>
+<li>［登録携帯番号変更］をタップ</li>
+<br>
+<li><font color="ff0000">［パスワード］</font>と<font color="ff0000">［新しい携帯番号］</font>を入力し［送信］をタップ</li>
+<br>
+<li>SMSで届いた4桁の認証コードを入力し、［変更］をタップすると変更が完了します</li>
+</ol>
 
-1. サイドメニューにある「設定」をタップ
+<hr>
 
-1. ［登録携帯番号変更］をタップ
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-1. ［**パスワード**］と［**新しい携帯番号**］を入力し［送信］をタップ
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［設定］をタップ</li>
+<br>
+<li>［登録携帯番号変更］をタップ</li>
+<br>
+<li><font color="ff0000">［パスワード］</font>と<font color="ff0000">［新しい携帯番号］</font>を入力し［送信］をタップ</li>
+<br>
+<li>SMSで届いた4桁の認証コードを入力し、［変更］をタップすると変更が完了します</li>
+</ol>
 
-1. SMSで届いた4桁の認証コードを入力し、［変更］をタップすると変更が完了します。
+<hr>
 
-### ■スマートフォンブラウザをご利用の場合
+<h3>■PCブラウザをご利用の場合</h3>
 
-### ■PCブラウザをご利用の場合
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューにある［設定］をクリック</li>
+<br>
+<li>［登録携帯番号変更］をクリック</li>
+<br>
+<li><font color="ff0000">［パスワード］</font>と<font color="ff0000">［新しい携帯番号］</font>を入力し［送信］をクリック</li>
+<br>
+<li>SMSで届いた4桁の認証コードを入力し、［変更］をクリックすると変更が完了します</li>
+</ol>
+
+<hr>
