--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/11.ログアウト方法.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/11.ログアウト方法.md
@@ -1,13 +1,36 @@
-# ログアウト方法
+<h3>ログアウト方法</h3>
+<hr>
 
 以下の手順でログアウトできます。
 
-### ■iOS、Androidアプリをご利用の場合
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. TOP画面左上の［三］を選択
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューの最下部<strong>［ログアウト］</strong>をタップするとログアウトできます。</li>
+</ol>
 
-1. サイドメニューの最下部［**ログアウト**］をタップするとログアウトできます。
+<hr>
 
-### ■スマートフォンブラウザをご利用の場合
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-### ■PCブラウザをご利用の場合
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューの最下部<strong>［ログアウト］</strong>をタップするとログアウトできます。</li>
+</ol>
+
+<hr>
+
+<h3>■PCブラウザをご利用の場合</h3>
+
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューの最下部<strong>［ログアウト］</strong>をクリックするとログアウトできます。</li>
+</ol>
+
+<hr>
