--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/3.電話番号認証について.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/1.店舗登録・ログインについて/3.電話番号認証について.md
@@ -1,25 +1,32 @@
-# 電話番号認証について
+<h3>電話番号認証について</h3>
+<hr>
 
-コネポケは、安心・安全にサービスをご利用いただくため、携帯電話のSMS（ショートメッセージサービス）による認証が必要です。
+コネポケは、安心・安全にサービスをご利用いただくため、<strong>携帯電話のSMS（ショートメッセージサービス）</strong>による認証が必要です。
 
 コネポケでは、下記を行う際にSMS認証が必要となります。
 
-- 会員登録時  
-- パスワードを忘れた時の再設定時  
-- 登録携帯番号の変更時
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>会員登録時</li>
+<li>パスワードを忘れた時の再設定時</li>
+<li>登録携帯番号の変更時</li>
+</ul>
+</div>
 
 SMS認証方法は下記の流れとなります
 
-### ■iOS、Androidアプリをご利用の場合
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>SMS認証の手順</strong>
+</div>
 
-1. 『**携帯番号**』と記載がある箇所に、ご自身の携帯電話番号を入力する
+<ol>
+<li><font color="ff0000"><strong>『携帯番号』</strong></font>と記載がある箇所に、ご自身の携帯電話番号を入力する</li>
+<br>
+<li><strong>［送信］</strong>ボタンをタップ</li>
+<br>
+<li>入力していただいた携帯電話に4桁の認証用の番号が届く</li>
+<br>
+<li>届いた認証番号を<font color="ff0000"><strong>『SMS認証コード』</strong></font>欄に入力する</li>
+</ol>
 
-1. ［**送信**］ボタンをタップ
-
-1. 入力していただいた携帯電話に4桁の認証用の番号が届く
-
-1. 届いた認証番号を『**SMS認証コード**』欄に入力する
-
-### ■スマートフォンブラウザをご利用の場合
-
-### ■PCブラウザをご利用の場合
+<hr>
