--- a/4.カテゴリから探す/10.機能・その他/7.不具合について/2.アプリが落ちる、画像が表示されない.md
+++ b/4.カテゴリから探す/10.機能・その他/7.不具合について/2.アプリが落ちる、画像が表示されない.md
@@ -1,14 +1,22 @@
-# アプリが落ちる、画像が表示されない
+<h3>アプリが落ちる、画像が表示されない</h3>
+<hr>
 
-■問題や不具合の改善のため、下記の対応を行ってください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>問題や不具合の改善のため、下記の対応を行ってください</strong>
+</div>
 
-1. 携帯端末を再起動する
+<ul>
+<li>携帯端末を再起動する</li>
+<br>
+<li>通信環境の安定した場所で利用する</li>
+<br>
+<li>マルチタスク機能を終了する（起動中の他のアプリを終了する）</li>
+<br>
+<li>アプリを再インストールしてログインしなおす</li>
+</ul>
 
-1. 通信環境の安定した場所で利用する
+<font color="ff0000">上記をお試しいただいても改善できない場合、下記よりお問い合わせください。</font>
 
-1. マルチタスク機能を終了する（起動中の他のアプリを終了する）
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
 
-1. アプリを再インストールしてログインしなおす
-
-上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+<hr>
