--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/1.本人確認が必要なサービス.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/1.本人確認が必要なサービス.md
@@ -1,7 +1,14 @@
-# 本人確認が必要なサービス
+<h3>本人確認が必要なサービス</h3>
+<hr>
 
-店舗会員様は閲覧以外の全てのサービスのご利用に、証明書のご提出が必要です。
+店舗掲載登録いただく際は、閲覧以外の<font color="ff0000"><strong>全てのサービスのご利用において</strong></font>本人確認書類の提出が必要です。
 
-ご本人様確認が完了するとマイページに認証マークが表示されます。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+お客様に安心・安全にコネポケをご利用いただくため、ご理解くださいますようお願いします。
+</div>
 
-※認証マークはあくまで安全性を判断いただくための一つの指標となりますので何らかを保証するものではございません。 
+本人確認が完了すると、マイページに<font color="ff0000"><strong>［認証済アイコン］</strong></font>が表示されます。  
+
+<font color="ff0000">※認証マークはあくまでも安全性を判断いただくための一つの指標となりますので、何らかを保証するものではございません。</font>
+
+<hr>
