--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/4.認証済みマークの表示について.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/4.認証済みマークの表示について.md
@@ -1,9 +1,15 @@
-# 認証済みマークの表示について
+<h3>認証済みマークの表示について</h3>
+<hr>
 
-認証済みマークの表示は確認手続きが完了後にマイページに表示されます。
+認証済みマークの表示は、事務局で本人確認書類による本人認証が完了するとマイページに表示されます。
 
-サイドメニュー　＞`［上部の写真アイコン］`をタップ
+認証済みマークは<strong>［マイページ］</strong>でご確認いただけます。  
+（［ユーザーアイコン］をタップするとマイページが表示されます）
 
-身分証の認証は、申請から３営業日ほどお日にちをいただく場合もございます。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+本人確認書類の認証は、申請から<font color="#ff0000">通常３営業日</font>ほどお日にちをいただく場合がございます。
+</div>
 
-※認証マークはあくまで安全性を判断いただくための一つの指標となりますので何らかを保証するものではございません。
+<font color="#ff0000">※認証マークはあくまで安全性を判断いただくための一つの指標となりますので、何らかを保証するものではございません。</font>
+
+<hr>
