--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/6.確認書類を提出したのに取引ができない.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/6.本人確認書類について/6.確認書類を提出したのに取引ができない.md
@@ -1,7 +1,12 @@
-# 確認書類を提出したのに取引ができない
+<h3>確認書類を提出したのに取引ができない</h3>
+<hr>
 
-本人確認処理には３営業日程度のお時間をいただく場合がございます。
-
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+本人確認処理には<font color="ff0000"><strong>３営業日程度</strong></font>のお時間をいただく場合がございます。<br>
+<br>
 確認処理が完了するまでは、サービスをご利用いただけません。
+</div>
 
 恐れ入りますが、もうしばらくお待ちください
+
+<hr>
