--- a/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/1.本人確認が必要なサービス.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/1.本人確認が必要なサービス.md
@@ -1,9 +1,14 @@
-# 本人確認が必要なサービス
+<h3>本人確認が必要なサービス</h3>
+<hr>
 
-閲覧・出品以外の全てのサービスに本人確認書類の提出が必要です。
+<font color="ff0000"><strong>【閲覧】【出品】</strong></font>以外の全てのサービスに本人確認書類の提出が必要です。
 
-全てのユーザー様に安心・安全にコネポケをご利用いただくために出品だけされるユーザー様も本人確認書類の提出をお勧めしております。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+全てのユーザー様に安心・安全にコネポケをご利用いただくために、出品だけされるユーザー様も本人確認書類の提出をお勧めしております。  
+</div>
 
-本人確認が完了するとマイページに認証マークが表示されます。  
+本人確認が完了するとマイページに<font color="ff0000"><strong>［認証済アイコン］</strong></font>が表示されます。  
 
-※認証マークはあくまで安全性を判断いただくための一つの指標となりますので何らかを保証するものではございません。  
+<font color="ff0000">※認証マークはあくまでも安全性を判断いただくための一つの指標となりますので、何らかを保証するものではございません。</font>
+
+<hr>
