--- a/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/2.本人確認書類の提出方法を教えてください.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/2.本人確認書類の提出方法を教えてください.md
@@ -1,13 +1,26 @@
-# 本人確認書類の提出方法を教えてください
+<h3>本人確認書類の提出方法を教えてください</h3>
+<hr>
 
-### ■新規会員登録の時に確認書類を提出する
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>本人確認書類の提出手順</strong>
+</div>
 
-1. 新規会員登録画面から進む
+<h3>■新規会員登録の時に確認書類を提出する</h3>
 
-1. ［**今すぐアップロード**］をタップする
+<ol>
+<li>新規会員登録完了後に本人確認書類のアップロード画面に切り替わります</li>
+<br>
+<li><font color="ff0000">［今すぐアップロード］</font>をタップする</li>
+<br>
+<li>本人確認書類をアップロードする</li>
+</ol>
 
-1. 本人確認書類をアップロードする
+<h3>■会員登録後に後から本人確認書類を提出する</h3>
 
-### ■会員登録後に後から本人確認書類を提出する
+<ol>
+<li>サイドメニューの［設定］タップ</li>
+<br>
+<li>［会員登録情報］から本人確認書類のアップロードができます</li>
+</ol>
 
-サイドメニューの`［設定］`＞　`［会員登録情報］`＞本人確認書類のアップロード
+<hr>
