--- a/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/4.本人確認書類がアップロードできない.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/4.本人確認書類がアップロードできない.md
@@ -1,16 +1,99 @@
-# 本人確認書類がアップロードできない
+<h3>本人確認書類がアップロードできない</h3>
+<hr>
 
 画像がアップロードできない場合、以下の原因が考えられます。
 
-   ・データー通信量が制限されていて、通信速度が著しく低下している
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>画像サイズが大きすぎる（推奨サイズ：2MG以内）</li>
+<br>
+<li>データー通信量が制限されていて、通信速度が著しく低下している</li>
+<br>
+<li>一時的に通信状態が不安定になってい</li>
+<br>
+<li>端末に問題が発生している</li>
+</ul>
+</div>
 
-   ・一時的に通信状態が不安定になっている
+<font color="ff0000">※アクセスの集中により、画像の読み込み速度が遅くなり、正しく読み込まれないことがあります。</font>
 
-   ・端末に問題が発生している
+画像サイズに問題がないもかかわらず改善されない場合は、まずは以下の操作で問題が解消されるかお試しください。
 
-またアクセスの集中により、画像の読み込み速度が遅くなり、正しく読み込まれないことがあります。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>動作に問題がある時の対応</strong>
+</div>
 
-アプリを再起動しても画像がアップロードできない場合は、お手数ですがしばらく時間を置いてから、安定した通信環境での操作を試しください。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>マルチタスク機能の終了
+</strong></span><br>
+起動中のアプリを全て終了させてください。<br>
+※操作手順は端末によって異なります。
+</div>
 
-上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](support@conepoke.com)
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>通信環境の見直し</strong></span><br>
+Wi-Fiなど、安定した通信環境での操作をお試しください。<br>
+※端末に表示されている電波状況が良好な状態でも、通信環境が安定していない場合もあります。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>本体の再起動</strong></span><br>
+スマートフォン本体の再起動をお試しください。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>空き容量の確認</strong></span><br>
+スマートフォンの空き容量が十分にあるか、ご確認ください。
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc; ">
+<span style="font-size:18px; color:#ff0000"><strong>データ通信速度制限の確認</strong></span><br>
+携帯各社との契約プランに定められたデータ通信量の上限を超えている場合、通信速度に制限がかけられている可能性があります。
+</div>
+
+上記を全てご確認いただいても改善されない場合は下記をお試しください。
+
+<ol>
+<li>アプリの再インストールをおこなってください。<br>
+<font color="#ff0000">※アプリの再インストール、再起動をしても情報が消失することはありません。</font></li>
+<br>
+<li>ご利用のアプリケーションが最新版ではない可能性がございます。</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>アップデートの手順</strong>
+</div>
+
+ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。
+
+<h3>■iOSの場合</h3>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>「App Store」よりコネポケを検索</li>
+<br>
+<li>「アップデート」を選択</li>
+<br>
+<font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font></li>
+</ol>
+</div>
+
+<h3>■Androidの場合</h3>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>「Playストア」よりコネポケを検索</li>
+<br>
+<li>「更新」を選択</li>
+<br>
+<font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。<br>
+<br>
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。</font></li>
+</ol>
+</div>
+
+上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。
+
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+
+<hr>
