--- a/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/6.提出した確認書類は表示されるのですか.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/6.提出した確認書類は表示されるのですか.md
@@ -1,5 +1,11 @@
-# 提出した確認書類は表示されるのですか
+<h3>提出した確認書類は表示されるのですか</h3>
+<hr>
 
-ご提出いただきました確認書類に関しては、開示されることはございません。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<font color="ff0000">ご提出いただきました確認書類に関しては、開示されることはございません。<br>
+本人確認手続きのみに使用させていただいております。 </font>
+</div>
 
-本人確認手続きのみに使用させていただいております。
+本人確認書類提出後から認証完了までの「認証中」は、提出いただいた画像をアップロードしたページでご確認いただけますが、認証完了後に非表示となります。
+
+<hr>
