--- a/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/8.個人情報の取り扱いについて.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/8.個人情報の取り扱いについて.md
@@ -1,5 +1,10 @@
-# 個人情報の取り扱いについて
+<h3>個人情報の取り扱いについて</h3>
+<hr>
 
-本人確認の際にお送りいただいた画像や個人情報は、プライバシーポリシーに基づき厳正に管理しております。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+本人確認の際にお送りいただいた画像や個人情報は、<font color="ff0000">プライバシーポリシー</font>に基づき厳正に管理しております。  
+</div>
 
-詳細につきましては、［ガイド＆ヘルプ］＞［利用規約など］＞［プライバシーポリシー］をご確認ください。
+詳細につきましては、［ガイド＆ヘルプ］＞<font color="ff0000"><strong>［利用規約など］</strong></font>＞<font color="ff0000"><strong>［プライバシーポリシー］</strong></font>をご確認ください。
+
+<hr>
