--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/1.プレミアム会員を解約する.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/1.プレミアム会員を解約する.md
@@ -1,13 +1,31 @@
-# プレミアム会員を解約する
+<h3>プレミアム会員を解約する</h3>
+<hr>
 
-プレミアム会員からスタンダード会員（無料会員）へ登録変更するには、以下の手順で行ってください。  
+プレミアム会員からスタンダード会員（無料会員）へ登録変更するには、以下の手順で行ってください。
 
-サイドメニューの［設定］＞［ご利用中のサービス］＞から【**プレミアム会員の解約手続き**】を行なってください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>プレミアム会員の解約手順</strong>
+</div>
 
-サービス期間が残っている場合でも、退会後にプレミアム会員のサービスをご利用いただくことや、
+<ol>
+<li>サイドメニューの［設定］</li>
+<br>
+<li>［ご利用中のサービス］＞から<font color="ff0000">【プレミアム会員の解約手続き】</font>を行なってください。</li>
+</ol>
 
-日割りなどでの返金はできません。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;"><font color="ff0000">
+<ul>
+<li>プレミアム会員は1ヶ月ごとの自動継続課金となります</li>
+<br>
+<li>ご解約いただいても次回更新日の前日まではプレミアム会員サービスを利用になれます</li>
+<br>
+<li>解除した日付にかかわらず、日割り返金はできません</li>
+<br>
+<li>既にお支払い済みの月額料金（350円）については、いかなる理由であっても返金はいたしませんので、あらかじめご了承ください。</li>
+<br>
+<li>プレミアム会員を解約しても、スタンダード会員としてコネポケをご利用いただけます。</li>
+</font>
+</ul>
+</div>
 
-既にお支払い済みの月額料金(350円)については、いかなる理由であっても返金はいたしませんので、あらかじめご了承ください。  
-
-プレミアム会員を解約しても、スタンダード会員登録は退会されません。
+<hr>
