--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/3.退会する.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/3.退会する.md
@@ -1,10 +1,48 @@
-# 退会する
+<h3>退会する</h3>
+<hr>
 
-    会員の退会については以下の手順で退会申請をお願いいたします
+会員の退会については以下の手順で退会申請をお願いいたします。
 
-サイドメニューの［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会について］＞【退会する】
-より、必要事項をご入力して送信してください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>退会手順</strong>
+</div>
 
-コネポケ事務局で現在取引中の商品や出品中・リクエスト中に商品がないか確認のうえ退会手続を行います。  
+<ol>
+<li>サイドメニューの［ガイド＆ヘルプ］をタップ</li>
+<br>
+<li>［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会について］＞<font color="#ff0000">【退会する】</font>をタップ
+<br>
+<li>退会申請のメールフォームに必要事項をご入力して送信してください。</li>
+</ol>
 
-コネポケ事務局から退会完了メールが届きますので、メールの配信をもって退会が完了したします。
+<font color="#ff0000">※コネポケ事務局で現在取引中の商品や出品中・リクエスト中に商品がないか確認のうえ退会手続を行います。
+
+※コネポケ事務局から退会完了メールが届きますので、メールの配信をもって退会が完了いたします。</font>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>退会する必要がない場合</strong>
+</div>
+
+次の場合は退会しなくても各手続きをすれば大丈夫です。
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li><strong>プレミアム会員を解除したい</strong><br>
+プレミアム会員を解除してスタンダード会員として無料でご利用いただけます。</li>
+<br>
+<li><strong>通知を解除したい</strong><br>
+設定から通知を届かなくすることができます。<br>
+<br>
+サイドメニューから［ガイド＆ヘルプ］＞［カテゴリから探す］＞［退会、メール・通知の解除について］＞【新着通知を解除したい】で詳細が確認できます。</li>
+<br>
+<li><strong>迷惑行為を受けた</li></strong>
+<font color="#ff0000">通報やコネポケ事務局が発見した規約に違反する商品や、コメント・迷惑行為・規約違反についてはコネポケ事務局にて内容を確認されていただき、適切に対応いたします。<br>
+問題の発生した対象商品ページより<strong>「通報」</strong>ください。
+</font><br>
+<br>
+<li><strong>コネポケの使い方がわからない</strong><br>
+コネポケの使い方について様々な解決方法を<font color="#ff0000"><strong>［ガイド＆ヘルプ］</strong></font>でご用意しております。
+</li>
+</div>
+
+<hr>
