--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/2.プレミアム会員を解約した後に再度プレミアム会員になる.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/2.プレミアム会員を解約した後に再度プレミアム会員になる.md
@@ -1,7 +1,16 @@
-# プレミアム会員を解約した後に再度プレミアム会員になる
+<h3>プレミアム会員を解約した後に再度プレミアム会員になる</h3>
+<hr>
 
 プレミアム会員を解約した後に再度プレミアム会員のご登録いただくことができます。
 
-サイドメニューの［設定］＞［ご利用中のサービス］＞［プレミアム会員］からプレミアム会員の登録手続きを行なってください。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>プレミアム会員の登録手順</strong>
+</div>
 
-プレミアム会員を解約した同月に再登録した場合でも、以前ご利用していたプレミアム会員のサービス期間の日割りなどでのご利用はせきませんので、あらかじめご了承ください。  
+サイドメニューの［設定］＞［ご利用中のサービス］＞［プレミアム会員］からプレミアム会員の登録手続きを行なってください。
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+プレミアム会員を解約した同月に再登録した場合でも、以前ご利用していたプレミアム会員のサービス期間の日割りなどでのご利用はせきませんので、あらかじめご了承ください。
+</div>
+
+<hr>
