--- a/6.お問い合わせ/6.不具合について/2.一部の機能が利用できない.md
+++ b/6.お問い合わせ/6.不具合について/2.一部の機能が利用できない.md
@@ -1,29 +1,46 @@
-# 一部の機能が利用できない
+<h3>一部の機能が利用できない</h3>
+<hr>
 
 ご利用のアプリケーションが最新版ではない可能性がございます。
 
 ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。  
 
-### iosの場合
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>アップデートの手順</strong>
+</div>
 
-1.「App Store」よりコネポケを検索
+ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。
 
-2.「アップデート」を選択
-※最新のバージョンをご利用されている場合「アップデート」は表示されません。
+<h3>■iosの場合</h3>
 
-### Androidの場合
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>「App Store」よりコネポケを検索</li>
+<br>
+<li>「アップデート」を選択  <br>
+<br>
+<font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font></li>
+</ol>
+</div>
 
-1.「Playストア」よりコネポケを検索
+<h3>■Androidの場合</h3>
 
-2.「更新」を選択
-
-※機種やOSによってボタンの名称が異なる場合がございます。
-  
-※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>「Playストア」よりコネポケを検索</li>
+<br>
+<li>「更新」を選択<br>
+<br>
+<font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。<br>
+<br>
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。</font></li>
+</ol>
+</div>
 
 アプリ版をご利用できない場合はWebサイトからご利用ください。
 
----
+上記をお試しいただいても改善できない場合、下記よりメールにてお問い合わせください。
 
-上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](support@conepoke.com)
+
+<hr>
